--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,18 @@
 .App {
   text-align: center;
 }
-* {
-  background-color: black;
-}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
+html,
+body,
+#root,
+#root > div {
+  height: 100%;
+  margin: 0;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
