--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,9 @@
   height: 40vmin;
   pointer-events: none;
 }
+.heb {
+  direction: rtl;
+}
 html,
 body,
 #root,
@@ -41,4 +44,44 @@ body,
   to {
     transform: rotate(360deg);
   }
+}
+
+body {
+  --text-color: #222;
+  --bkg-color: #fff;
+}
+body.dark-theme {
+  --text-color: #eee;
+  --bkg-color: #121212;
+}
+
+@media (prefers-color-scheme: dark) {
+  /* defaults to dark theme */
+  body {
+    --text-color: #eee;
+    --bkg-color: #121212;
+  }
+  body.light-theme {
+    --text-color: #222;
+    --bkg-color: #fff;
+  }
+}
+
+* {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+  background: var(--bkg-color);
+}
+
+h1,
+p {
+  color: var(--text-color);
+}
+a {
+  color: black;
+}
+a.dark-theme {
+  color: white;
 }
